<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Activity.ui.equipos.ModificarFragment">

    <!-- Toolbar con título y logo -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarModificar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/azul_general"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/btnVolverAtrasModificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_volver_atras"
                android:contentDescription="@string/volver"
                android:layout_marginEnd="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/modificar_productos"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/blanco"
                android:layout_weight="1"
                android:contentDescription="@string/descripcion_modificar_productos" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/logo"
                android:adjustViewBounds="true"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <!-- Contenido del formulario de modificación -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarModificar"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- Tipo de Equipo con ícono -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputTipoEquipoModificar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Tipo_de_equipo"
                app:startIconDrawable="@drawable/tipo_equipo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTipoEquipoModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/high_contrast_text"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputCodigoPatrimonialModificar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/codigo_patrimonial"
                app:startIconDrawable="@drawable/codigo_patrimonial">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCodigoPatrimonialModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/high_contrast_text"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Descripción con ícono -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputDescripcionModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:startIconDrawable="@drawable/descripcion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDescripcionModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Estado con ícono -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputEstadoModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estado"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:startIconDrawable="@drawable/estado"
                app:endIconMode="dropdown_menu">

                <AutoCompleteTextView
                    android:id="@+id/dropdownEstadoModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"
                    android:cursorVisible="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Fecha de Compra con ícono de calendario -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputFechaCompraModificar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_compra"
                app:startIconDrawable="@drawable/fecha_de_compra"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFechaCompraModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Marca con ícono -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputMarcaModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/marca"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:startIconDrawable="@drawable/marca">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtMarcaModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Modelo con ícono -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputModeloModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/modelo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:startIconDrawable="@drawable/modelo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtModeloModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Nombre de Equipo con ícono -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputNombreDeEquipoModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_de_equipo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:startIconDrawable="@drawable/nombre_de_equipo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNombreDeEquipoModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Número de Orden con ícono -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputNumeroDeOrdenModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero_de_orden"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:startIconDrawable="@drawable/numero_de_orden">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNumeroDeOrdenModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Serie con ícono -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputNumeroDeSerieModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/serie"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:startIconDrawable="@drawable/serie">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNumeroDeSerieModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Responsable con ícono -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputResponsableModificar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/responsable"
                app:startIconDrawable="@drawable/responsable"
                app:endIconMode="dropdown_menu">

                <AutoCompleteTextView
                    android:id="@+id/dropdownResponsableModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"
                    android:cursorVisible="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Ubicación con ícono y menú desplegable -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputUbicacionModificar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ubicacion"
                app:startIconDrawable="@drawable/ubicacion"
                app:endIconMode="dropdown_menu">

                <AutoCompleteTextView
                    android:id="@+id/dropdownUbicacionModificar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"
                    android:cursorVisible="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón para modificar el equipo -->
            <Button
                android:id="@+id/btnModificarEquipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modificar_equipo"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/azul_general"
                android:textColor="@color/blanco" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
