<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <!-- Fondo de la parte superior -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/fondo_r"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Logo en el centro del fondo -->
    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Texto de bienvenida -->
    <TextView
        android:id="@+id/textViewBienvenida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_bienvenida"
        android:fontFamily="@font/san_francisco"
        android:layout_marginTop="75dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/rojo_brillante"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Campos de entrada para usuario y contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputUsuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_usuario"
        app:startIconDrawable="@drawable/ic_email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/textViewBienvenida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_password"
        app:startIconDrawable="@drawable/ic_lock"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtInputUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón para iniciar sesión -->
    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/label_start_session"
        android:textColor="@color/blanco"
        app:backgroundTint="#073066"
        android:drawableEnd="@drawable/ic_login"
        android:drawableTint="#fff"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtInputPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
